# shinigami

./: .gitignore  README.md  pyproject.toml
shinigami/: cli.py  config.py  generator.py  models.py  prompts.py  scaffolder.py  writer.py
shinigami/llm/: __init__.py  base.py  claude.py  gemini.py  openai_provider.py
shinigami/specs/agentic/: agenthub.yaml  apiwise.yaml  archgen.yaml  codeforge.yaml  deployai.yaml  docbrain.yaml  logsense.yaml  querypilot.yaml  tradegpt.yaml
shinigami/specs/real-world/: bookease.yaml  collabink.yaml  marketsphere.yaml  pulse.yaml  quickbite.yaml  splitwisex.yaml  streamforge.yaml  talentforge.yaml  taskflow.yaml  votesphere.yaml  weatherhub.yaml
shinigami/specs/trading/: coinforge.yaml  corepay.yaml  crosswire.yaml  edengate.yaml  insureit.yaml  kaido.yaml  mercury.yaml  openbank.yaml  pipsmith.yaml  squareone.yaml  taxforge.yaml  tradeflow.yaml
shinigami/templates/common/: .env.example.j2  .gitignore.j2  Dockerfile.j2  README.md.j2  docker-compose.yaml.j2
shinigami/templates/cpp-drogon/: CMakeLists.txt.j2  main.cc.j2
shinigami/templates/go/: go.mod.j2
shinigami/templates/go/cmd/: server.go.j2
shinigami/templates/node-express/: package.json.j2
shinigami/templates/node-express/src/: app.ts.j2  index.ts.j2
shinigami/templates/python-fastapi/: pyproject.toml.j2
shinigami/templates/rust-actix/: Cargo.toml.j2
tests/: test_cli.py  test_config.py  test_e2e.py  test_generator.py  test_llm.py  test_models.py  test_prompts.py  test_scaffolder.py  test_specs_valid.py  test_writer.py
(+3 files in other folders)
