[project]
name = "shinigami-cli"
version = "0.1.1"
description = "Backend API code generation agent"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Anshul", email = "anshul.ab17x@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
]

[project.scripts]
shinigami = "shinigami.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["pytest-asyncio>=0.23.0"]
